--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           
           if (/android/i.test(userAgent)) {
             // Redirect for Android devices
-            window.location.href = "https://fire.nyc3.digitaloceanspaces.com/FIRE%20SCENE.gltf";
+            window.location.href = "https://fire1.nyc3.digitaloceanspaces.com/FIRE%20SCENE.gltf";
           } else if (/iPhone|iPad/i.test(userAgent)) {
             // Redirect for Apple devices
-            window.location.href = "https://fire.nyc3.digitaloceanspaces.com/FIRE%20SCENE.usdz";
+            window.location.href = "https://fire1.nyc3.digitaloceanspaces.com/FIRE%20SCENE.usdz";
           } else {
             // Redirect for other devices or show an error message
             window.location.href = "https://example.com/default";
