--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello to the Fire Demo</h1>
+    <h1>Welcome to the Fire Demo</h1>
     <script>
         // Function to detect the user agent and redirect accordingly
         function detectAndRedirect() {
